# TaxPilot

./: .gitignore  CLAUDE.md  CONTEXT.md  DATABASE_SCHEMA_PLAN.md  Dockerfile  INSTRUCTIONS.md  LICENSE  README.md  config.json  docker-compose.yml  issue_article_search.md  issue_search_api.md  local_deployment_plan.md  main.py  next_steps.md  pyproject.toml  run_e2e_test.py  tech-specification.md
blueprint/: prompt-1.txt  prompt-10.txt  prompt-11.txt  prompt-12.txt  prompt-13.txt  prompt-14.txt  prompt-15.txt  prompt-16.txt  prompt-17.txt  prompt-18.txt  prompt-19.txt  prompt-2.txt  prompt-20.txt  prompt-21.txt  prompt-22.txt  prompt-23.txt  prompt-24.txt  prompt-3.txt  prompt-4.txt  prompt-5.txt  prompt-6.txt  prompt-7.txt  prompt-8.txt  prompt-9.txt
taxpilot/backend/api/: app.py  models.py  search_utils.py
taxpilot/backend/data_processing/: README.md  database.py  pipeline.py  scraper.py  tracking.db  tracking.py  xml_parser.py
taxpilot/backend/search/: README.md  article_search.py  article_search_demo.py  embeddings.py  example.py  indexing_pipeline.py  search_api.py  search_cli.py  search_exmaple.md  segmentation.py  test_article_search.py  test_hierarchical_segmentation.py  test_hierarchical_vector_db.py  vector_db.py
taxpilot/infrastructure/: README.md  deploy.py  embedding_config.py  modal_config.py  pipeline_scheduler.py  vector_db_config.py
taxpilot/tests/backend/: test_search_api.py
tests/backend/: e2e_config.py  e2e_helpers.py  e2e_readme.md  test_e2e_search.py
tests/backend/api/: test_search_endpoint.py  test_search_endpoint_integration.py  (+1 more)
(+23 files in other folders)
